           - Evaluating magic items should use the best skill
           - Shaman/Mage combinations can now use the spells command
           - Report should now show all relevant resources for multiclass
           - "list fit" at shops should now work correctly
           - Fixed a typo in a previous news entry!
           - Fixed score output to show all relevant resources

03-25-20 : Multiclass hitpoint fixes:
           - Monks base hitpoints have been increased but they no longer 
             have access to advanced defense. Overall this should even out. If
             you have a single class monk that put points into advanced defense
             you can get that fixed up by an admin. This change paves the way 
             for future improvements to the skill for War/Deik.
           - Fixed a bug with multiclass hitpoints where previously it chose
             the base hitpoints of the first class now it takes the average.

01-22-20 : Some Deikhan work here.
           - Lay Hands cooldown has been shortened and now heals more
           - Synostodweomer enabled and reimagined as a small hit point buff.
             It has a cooldown matching it's duration so can be maintained

01-10-20 : First bit of Deikhan rework. Those who are well learned in advanced 
           riding can now do new amazing feats. Super powererful things like
           loot corpses and pen/yogi/med while on horseback.
           
01-07-20 : Fix molten proc, Fix blind on deikhan swords.

02-16-19 : Immunity to +1/+2/+3 no longer have any effect in the game. 
           Immunity to non-magic is still circumvented by magic weapons. Also,
           the enhance weapon spell no longer makes weapons glow. 
           Thieves Rejoice!

11-29-18 : Class Quest rewards have been updated.
           Monk sashes, deikhan swords/shield, and Shaman masks are now much
           more worthwhile.

11-27-18 : The duration of the Blindness skill has been slightly increased,